stopped horizontal overflow scrolling in cart

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -412,8 +412,7 @@
    background: white;
    border-radius: 1rem;
 
-   overflow-x: scroll;
-   overflow-y: hidden;
+   overflow: hidden;
 
    margin: auto;
    padding: 3rem 2rem 6rem;
